--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,7 @@ a:active  { color:#FFFFFF; text-decoration:none }
     height: calc(100vh - 100px);
     padding: 20px 20px 0 20px;
     box-sizing: border-box;
+    overflow: auto;
   }
     .side-bar__tittle_group{
       font-size: 15px;
