--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,60 +15,64 @@ a:active  { color:#FFFFFF; text-decoration:none }
   background: #2f3e51;
   color: #FFFFFF;
   float: left;
-}
-  .side-bar__header {
+
+  &__header {
     height: 100px;
     font-size: 16px;
     background: #253141;
     padding: 0px 20px;
     line-height: 100px;
-  }
-    .side-bar__header_user {
+
+    &_user {
       float: left;
       font-style: bold;
     }
-    .side-bar__header_icon {
+    &_icon {
       float: right;
       margin-left: 10px;
       color: #FFFFFF;
     }
-  .side-bar__tittle{
+  }
+
+  &__tittle{
     height: calc(100vh - 100px);
     padding: 20px 20px 0 20px;
     box-sizing: border-box;
     overflow: auto;
-  }
-    .side-bar__tittle_group{
+
+    &_group{
       font-size: 15px;
     }
-    .side-bar__tittle_anser{
+    &_anser{
       font-size: 11px;
       margin: 5px 0 40px 0;
     }
+  }
+}
 
 .chat{
   height: 100vh;
   width: calc(100% - 300px);
   float: right;
-}
-  .chat__header{
+
+  &__header{
     padding: 0 40px;
     box-sizing: border-box;
     height: 100px;
-  }
-    .chat__header__left{
+
+    &__left{
       float: left;
     }
-      .chat__header_group{
+      &_group{
         padding-top: 35px;
         font-size: 20px;
         color: #333;
       }
-      .chat__header_user{
+      &_user{
         font-size:12px;
         color: #999999;
       }
-    .chat__header_button{
+    &_button{
       float: right;
       height: 40px;
       padding: 0 20px 0 20px;
@@ -77,67 +81,70 @@ a:active  { color:#FFFFFF; text-decoration:none }
       color: #38AEF0;
       background: #38AEF0;
     }
-  .chat__room{
+  }
+
+  &__room{
     padding: 46px 0 0 40px;
     border-top: 1px solid #eeeeee;
     height: calc(100% - 100px - 90px);
     box-sizing: border-box;
     overflow: auto;
-  }
-    .chat__room_user{
+
+    &_user{
       font-size: 16px;
       font-style: bold;
       color: #434A54;
       float: left;
     }
-    .chat__room_day{
+    &_day{
       float: left;
       margin-left:10px;
       color: #999999;
       font-size: 12px;
     }
-    .chat__room_anser{
+    &_anser{
       color: #434A54;
       font-size: 14px;
       padding: 10px 0 40px 0;
       clear: both;
     }
-  .chat__form{
+  }
+  &__form{
     box-sizing: border-box;
     background: #DDDDDD;
     font-size: 16px;
     height: 90px;
     padding: 20px 50px 20px 40px;
     width: 100%;
-  }
-    .chat__form_left{
+
+    &_left{
       float: left;
       width: 80% ;
     }
-      .chat__form_text{
+      &_text{
         color: #434A54;
         border: none;
       }
-        .chat__form_fieid{
+        &_fieid{
         height: 50px;
         padding-left: 20px;
         width: 90%;
         box-sizing: border-box;
         }
-        .chat__form_icon{
+        &_icon{
           line-height: 50px;
           font-size: 20px;
           float: right;
           width: 10%;
         }
-          .chat__form_hidden{
+          &_hidden{
             display:none;
           }
-    .chat__form_right{
+    &_right{
       float: right;
       width: 10%;
     }
-      .chat__form_button{
+      &_button{
         line-height: 50px;
         box-sizing: border-box;
         background: #38AEF0;
@@ -145,3 +152,6 @@ a:active  { color:#FFFFFF; text-decoration:none }
         border: none;
         padding: 0 20px;
       }
+  }
+}
+
