--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -5,29 +5,30 @@
       %ul
         - @group.errors.full_messages.each do |message|
           %li= message
+
   .chat-group-form__field
     .chat-group-form__field--left
       = f.label :name, "グループ名", class: 'chat-group-form__label'
     .chat-group-form__field--right
       = f.text_field :name, class: 'chat__group_name chat-group-form__input', placeholder: 'グループ名を入力してください'
+
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :"chat_group_チャットメンバーを追加", "チャットメンバーを追加", class: "chat-group-form__label"
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
-      = f.text_field :user_ids, id: "user_ids", placeholder: '追加したいユーザー名を入力してください'
-      %div{id: 'user-search-result'}
+        %input{class: 'chat-group-form__input', id: 'user_ids', placeholder: '追加したいユーザー名を入力してください', type: 'text'}
+      #user-search-result
 
--#
-        <div id='chat-group-users'>
-          <div class='chat-group-user clearfix' id='chat-group-user-22'>
-            <input name='chat_group[user_ids][]' type='hidden' value='22'>
-            <p class='chat-group-user__name'>seo_kyohei</p>
-          </div>
-        </div>
+  .chat-group-form__field.clearfix
+    .chat-group-form__field--left
+      %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
+    .chat-group-form__field--right
+      .chat-group-user.clearfix#chat-group-user-22
+        / = f.text_field :user_ids
+        %p.chat-group-user__name user_ids
 
-
-    .chat-group-form__field.clearfix
+  .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
       = f.submit :"send", class: "chat-group-form__action-btn"
